# spectrakit

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish-ghcr.yml  publish.yml
api/: index.html
api/baseline/: index.html
api/contrib/: index.html
api/derivative/: index.html
api/despike/: index.html
api/exceptions/: index.html
api/io/: index.html
api/normalize/: index.html
api/ops/: index.html
api/peaks/: index.html
api/pipeline/: index.html
api/plot/: index.html
api/quality/: index.html
api/scatter/: index.html
api/similarity/: index.html
api/sklearn/: index.html
api/smooth/: index.html
api/spectrum/: index.html
api/transform/: index.html
changelog/: index.html
docs/: changelog.md  index.md
docs/api/: baseline.md  contrib.md  convergence.md  derivative.md  despike.md  exceptions.md  index.md  io.md  normalize.md  ops.md  peaks.md  pipeline.md  plot.md  quality.md  scatter.md  similarity.md  sklearn.md  smooth.md  spectrum.md  transform.md  widgets.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: pipeline.md  sklearn.md  workflow.md
examples/: 01_quickstart.ipynb  02_baseline_methods.ipynb  03_derivatives_and_peaks.ipynb  04_scatter_correction.ipynb  05_sklearn_pipeline.ipynb
examples/01_quickstart/: 01_quickstart.ipynb  index.html
examples/02_baseline_methods/: index.html
examples/03_derivatives_and_peaks/: 03_derivatives_and_peaks.ipynb  index.html
examples/04_scatter_correction/: 04_scatter_correction.ipynb  index.html
examples/05_sklearn_pipeline/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/pipeline/: index.html
guides/sklearn/: index.html
guides/workflow/: index.html
search/: search_index.json
src/spectrakit/: __init__.py  _validate.py  _version.py  cli.py  convergence.py  exceptions.py  pipeline.py  plot.py  spectrum.py
src/spectrakit/baseline/: __init__.py  als.py  arpls.py  polynomial.py  rubberband.py  snip.py
src/spectrakit/contrib/: __init__.py  _lmfit.py  _pybaselines.py
src/spectrakit/derivative/: __init__.py  gap_segment.py  savgol.py
src/spectrakit/despike/: __init__.py  whitaker_hayes.py  zscore.py
src/spectrakit/io/: __init__.py  auto.py  csv.py  hdf5.py  jcamp.py  opus.py  spc.py
src/spectrakit/normalize/: __init__.py  area.py  minmax.py  snv.py  vector.py
src/spectrakit/ops/: __init__.py  align.py  average.py  correlate.py  crop.py  interpolate.py  subtract.py
src/spectrakit/peaks/: __init__.py  find.py  integrate.py
src/spectrakit/quality/: __init__.py  roughness.py  snr.py
src/spectrakit/scatter/: __init__.py  emsc.py  msc.py
src/spectrakit/similarity/: __init__.py  cosine.py  euclidean.py  pearson.py  spectral_angle.py
src/spectrakit/sklearn/: __init__.py  transformers.py
src/spectrakit/smooth/: __init__.py  savgol.py  whittaker.py
src/spectrakit/transform/: __init__.py  absorbance.py  atr_correction.py  kubelka_munk.py
src/spectrakit/widgets/: __init__.py  _serializers.py  _widget.py
src/spectrakit/widgets/_frontend/: package-lock.json  package.json  vite.config.ts
src/spectrakit/widgets/_frontend/src/: SpectrumWidget.tsx  index.tsx
tests/: conftest.py  test_adversarial.py  test_auto_detect.py  test_baseline.py  test_cli.py  test_contrib_lmfit.py  test_contrib_pybaselines.py  test_correctness.py  test_derivative.py  test_despike.py  test_exceptions.py  test_golden.py  test_hypothesis.py  test_io.py  test_io_adversarial.py  test_normalize.py  test_ops.py  test_peaks.py  test_pipeline.py  test_plot.py  test_properties.py  test_quality.py  test_scatter.py  test_similarity.py  test_sklearn.py  test_smooth.py  test_spectrum.py  test_transform.py  test_validate.py  test_widgets.py
tests/fixtures/: golden_als.npy  golden_input.npy  golden_msc.npy  golden_msc_input.npy  golden_rubberband.npy  golden_snip.npy  golden_snv.npy  golden_whittaker.npy
