[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectrakit"
dynamic = ["version"]
description = "Python toolkit for spectral data processing: format parsers, baseline correction, normalization, and similarity matching."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tubhyam Karthikeyan", email = "takarthikeyan25@gmail.com" },
]
keywords = [
    "spectroscopy",
    "chemometrics",
    "IR",
    "Raman",
    "NIR",
    "baseline-correction",
    "normalization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
io = [
    "h5py>=3.8",
]
spc = [
    # spc-spectra has a broken build on some platforms (missing numpy build dep).
    # Install separately if needed: pip install spc-spectra
    "spc-spectra>=0.4",
]
cli = [
    "typer>=0.9",
    "rich>=13.0",
]
baselines = [
    "pybaselines>=1.0",
]
fitting = [
    "lmfit>=1.2",
]
sklearn = [
    "scikit-learn>=1.3",
]
plot = [
    "matplotlib>=3.7",
]
all = [
    "spectrakit[io,spc,cli,baselines,fitting,sklearn,plot]",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.25",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
spectrakit = "spectrakit.cli:app"

[project.urls]
Homepage = "https://github.com/ktubhyam/spectrakit"
Documentation = "https://ktubhyam.github.io/spectrakit/"
Repository = "https://github.com/ktubhyam/spectrakit"
Issues = "https://github.com/ktubhyam/spectrakit/issues"
Changelog = "https://github.com/ktubhyam/spectrakit/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/spectrakit/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "docs/",
    "notebooks/",
    "*.md",
    "!README.md",
    "Makefile",
    ".github/",
    ".pre-commit-config.yaml",
    "mkdocs.yml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spectrakit"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "N806", "SIM102", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["spectrakit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "h5py",
    "spc",
    "typer",
    "lmfit",
    "pybaselines",
    "sklearn.*",
    "matplotlib.*",
]
ignore_missing_imports = true
